# EPE-prediction-UI

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: X_epe_rp_full.csv  X_train_epe_rp.csv  X_train_n_plus.csv  y_train_epe_rp.csv  y_train_n_plus.csv
models/: dalex_explainer_epe_rp.pkl  preprocessor_epe_rp.pkl  preprocessor_n_plus.pkl  xgb_epe_rp_model.json  xgb_n_plus_model.json
src/app/: app.py  epe.py  index.py  n_plus.py
src/notebooks/: playground.ipynb
src/scripts/: config.py  explainer.py  inference.py
src/utils/: app_config.py  app_translations.py  app_utils.py
