[project]
name = "epe-prediction-ui"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn==1.7.2",
    "xgboost==3.1.2",
    "streamlit==1.52.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
